--- a/src/matem/congresos/locales/es/LC_MESSAGES/matem.congresos.po
+++ b/src/matem/congresos/locales/es/LC_MESSAGES/matem.congresos.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2019-03-13 22:02+0000\n"
+"POT-Creation-Date: 2019-03-13 22:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -31,9 +31,25 @@ msgstr "Descripción"
 msgid "Enlace con imagen"
 msgstr ""
 
+#: matem/congresos/profiles/default/workflows/matem_congresos_slider_content_workflow/definition.xml
+msgid "Front Page"
+msgstr "Página principal"
+
 #: matem/congresos/content/slidercontent.py:22
 msgid "Image"
 msgstr "Imagen"
+
+#: matem/congresos/profiles/default/workflows/matem_congresos_slider_content_workflow/definition.xml
+msgid "Private"
+msgstr "Privado"
+
+#: matem/congresos/profiles/default/workflows/matem_congresos_slider_content_workflow/definition.xml
+msgid "Publish in Front Page"
+msgstr "Publicar en página principal"
+
+#: matem/congresos/profiles/default/workflows/matem_congresos_slider_content_workflow/definition.xml
+msgid "Retract"
+msgstr "Hacer privado"
 
 #: matem/congresos/profiles/default/types/SliderContent.xml
 msgid "Slider Content"
