--- a/src/matem/congresos/locales/es/LC_MESSAGES/plone.po
+++ b/src/matem/congresos/locales/es/LC_MESSAGES/plone.po
@@ -13,3 +13,12 @@ msgstr ""
 "Language-Name: English\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: DOMAIN\n"
+
+
+#: matem/congresos/profiles/default/workflows/matem_congresos_slider_content_workflow/definition.xml
+msgid "Front Page"
+msgstr "Página principal"
+
+#: matem/congresos/profiles/default/workflows/matem_congresos_slider_content_workflow/definition.xml
+msgid "Publish in Front Page"
+msgstr "Publicar en página principal"
